chore: update pom.xml to add arm support